# small-sae-bench

./: .gitignore  LICENSE  NOTES.md  README.md  fair_eval.py  pyproject.toml  run_bench.py  three_way_eval.py  train_register_subtracted.py  two_way_eval.py
results/: fair_eval.json  report.json
results/gpt2-l10/: report.json
results/gpt2-l10/topk/: history.json
results/gpt2-l6/: report.json
results/gpt2-l6/topk/: history.json
results/l15/: fair_eval.json  report.json
results/l15/position_aware/: history.json
results/l15/topk/: history.json
results/l5/: fair_eval.json  report.json
results/l5/position_aware/: history.json
results/l5/topk/: history.json
results/l9/: fair_eval.json  report.json
results/l9/position_aware/: history.json
results/l9/topk/: history.json
results/pythia-l12/: report.json
results/pythia-l22/: report.json
results/qwen-l20/: report.json
results/register_subtracted-gpt2-l10/: config.json  history.json  two_way_eval.json
results/register_subtracted-gpt2-l6/: config.json  history.json  two_way_eval.json
results/register_subtracted-l15/: config.json  history.json  three_way_eval.json
results/register_subtracted-l5/: config.json  history.json  three_way_eval.json
results/register_subtracted-l9/: config.json  history.json  three_way_eval.json
results/register_subtracted-pythia-l12/: config.json  history.json  two_way_eval.json
results/register_subtracted-pythia-l22/: config.json  history.json  two_way_eval.json
results/register_subtracted-qwen-l20/: config.json  history.json  two_way_eval.json
(+12 files in other folders)
